src/routes/game/components/elements/playerInputPopUp/PlayerInputPopUp.module.css
.optionsContainer {
  position: fixed;
  display: flex;
  flex-direction: column;
  min-width: 30%;
  max-width: 90%;
  top: 60%;
  bottom: 5vh;
  left: 20%;
  right: 20%;
  background-color: var(--near-black);
  padding: 2vh;
  border: 1px solid var(--primary);
  border-radius: 20px;
  z-index: 900;
}

.optionsTitleContainer {
  position: relative;
  display: flex;
  flex-direction: row;
  flex-grow: 0;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 1vh;
}

.title {
  font-size: 16px;
  padding: 0px;
  margin: 0px;
}

.buttonList {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: flex-start;
  gap: 1vh;
}

.buttonDiv {
  background-color: var(--primary);
  color: black;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  min-width: 64px;
  height: 32px;
  border-radius: 5px;
  border: 1px solid var(--primary);
  flex-basis: auto;
  padding: 8px;
  width: auto;
  margin-bottom: 0;
}

.buttonDiv:hover {
  background-color: black;
  color: var(--primary);
  border: 1px solid var(--primary);
  cursor: pointer;
}

.optionsMenuCloseIcon {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 4vh;
  height: 4vh;
  border-radius: 5px;
}

.optionsMenuCloseIcon:hover {
  background-color: var(--primary);
  color: black;
}

.contentContainer {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  align-content: flex-start;
  justify-content: flex-start;
  row-gap: 10px;
  column-gap: 10px;
  flex-wrap: wrap;
  overflow: auto;
  height: 100%;
  max-height: 100%;
  padding: 0.5em;
}

.form {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 5px;
}

.optForm.optForm {
  flex-direction: row;
  margin-bottom: 0;
}

.optForm.buttonRow {
  display: flex;
  margin-top: 0.5rem;
  align-items: center;
}

.optForm.buttonDiv {
  margin: 0 0.25em;
}

.optForm.cardDiv {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-height: none;
  max-width: none;
  height: 100%;
}

.cardList {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: flex-start;
  gap: 1vh;
}

.checkBoxRow:last-child {
  padding-bottom: 2vh;
}

.cardDiv {
  flex-basis: var(--card-size);
  max-height: var(--card-size);
  max-width: var(--card-size);
  height: var(--card-size);
  width: var(--card-size);
}

@media (orientation: portrait) {
  .optionsContainer {
    left: 0px;
    width: 100%;
    max-width: 100%;
  }

  .cardDiv {
    max-width: 14vw;
    max-width: 14dvw;
    max-height: 14vw;
    max-height: 14dvw;
  }
}

